# obsidian-vault-mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run-local.sh
docs/: architecture.md  getting-started.md  plan.md  tools-reference.md
obsidian_vault_mcp/: __init__.py  frontmatter.py  server.py  vault.py
tests/: test_frontmatter.py  test_vault.py
